Revision history for Toadfarm

0.42
       * Improved documentation

0.41     Wed Mar 19 17:58:41 2014
       * Add support for header regexp matching
       * Fix not let MOJO_CONFIG be visible in parent processes

0.40     Tue Dec 31 10:11:07 2013
       * Compatible with secrets() in Mojolicious 4.63

0.3001   Wed Dec  4 15:16:56 2013
       * Toadfarm could not really load application class in 0.30

0.30     Wed Dec  4 14:52:20 2013
       * Toadfarm can load application class

0.29     Wed Dec  4 09:06:13 2013
       * Skipping t/script.t on Win32
       * Default config file from app name

0.28     Tue Dec  3 21:18:06 2013
       * Add extra (experimental) options to script/toadfarm

0.27     Thu Nov 28 12:38:08 2013
       * Able to load application classes
       * Fix link to example etc directory
         Merge pull request #2 from dsteinbrunner/patch-1

0.2602   Fri Nov 22 12:18:11 2013
       * Clearning mojo environment variables

0.2601   Fri Nov 22 11:05:54 2013
       * Fix setting environment in ubic service

0.26     Fri Nov 22 09:07:04 2013
       * Not compatible pid/config file change for ubic service
       * Fix %ENV is localized
       * "log" in config is no longer required

0.25     Thu Nov 21 11:14:13 2013
       * Fix really bad bug: MUST NOT LOG user:password from request URL.

0.24     Thu Nov 21 10:01:34 2013
       * Change ubic status will be "running" even if the server does not
         respond to HTTP request.

0.23     Mon Nov 18 16:56:06 2013
       * Need to write new config on ubic reload

0.22     Mon Nov 18 15:15:43 2013
       * Fix bug when passing %env to Ubic::Service::Toadfarm

0.21     Sat Nov 16 16:14:55 2013
       * Add support for setting environment variables from Ubic service

0.20     Thu Nov 14 17:13:38 2013
       * Change format for AccessLog plugin:
         1.2.3.4 GET http://... 200 0.001s

0.19     Thu Nov 14 16:37:46 2013
       * Will return ubic status with pid as well
