@@ -19,7 +19,7 @@ from the request URL that the Mojolicious route dispatcher will see.
   server {
     listen 80;
     server_name domain.com
- 
+
     location /myapp {
       rewrite ^/myapp/?(.*)$ /$1 break;
       proxy_set_header X-Request-Base http://$host/myapp;
