@@ -1,0 +1,13 @@
+#!perl
+{
+  apps => [
+    't::lib::Test' => {
+      'config' => { bar => 123 },
+      'mount_point' => '/foo',
+      'remote_address' => '10.10.10.10',
+      'remote_port' => qr{8000},
+      'Host' => 'te.st',
+      'X-Request-Base' => 'http:/domain.com/foo',
+    },
+  ],
+}
